--- a/grid_2/index.html
+++ b/grid_2/index.html
@@ -6,6 +6,7 @@
   <title>Title</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.1/p5.min.js"></script>  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.1/addons/p5.dom.min.js"></script>
+  <script src="js/shapes.js"></script>
   <script src="js/grid.js"></script>
   <script src="js/sketch.js"></script>
 </head>
